--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,15 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-<a href="http://localhost:8080/firestation?stationNumber=1">http://localhost:8080/firestation?stationNumber=1</a><br/>
+<a href="http://localhost:8080/firestation?stationNumber=1">http://localhost:8080/firestation?stationNumber="1"</a><br/>
 
 <a href="http://localhost:8080/childAlert?address=1509 Culver St">http://localhost:8080/childAlert?address=1509 Culver St</a><br/>
 
-<a href="http://localhost:8080/phoneAlert?firestation=3">http://localhost:8080/phoneAlert?firestation=3</a><br/>
+<a href="http://localhost:8080/phoneAlert?firestation=3">http://localhost:8080/phoneAlert?firestation="3"</a><br/>
 
 <a href="http://localhost:8080/fire?address=1509 Culver St">http://localhost:8080/fire?address=1509 Culver St</a><br/>
 
-<a href="http://localhost:8080/flood/stations?stations=1">http://localhost:8080/flood/stations?stations=1,2></a><br/>
+<a href="http://localhost:8080/flood/stations?stations=1">http://localhost:8080/flood/stations?stations="1","2"></a><br/>
 
 <a href="http://localhost:8080/personInfo?lastName=boyd&firstName=john">http://localhost:8080/personInfo?lastName=boyd&firstName=john</a><br/>
 
